--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ header{
     color: rgb(0, 0, 0);
     background-color: aqua;
     height: 5rem;
+    width: 100vw;
+
+    position: fixed;
+    top: 0;
 }
 
 .nav-header{
@@ -19,4 +23,10 @@ header{
 
 .right-header {
     border: dashed black 2px;
+}
+
+/* Main */
+
+main{
+    margin-top: 6rem;
 }
